# meetingEZ

./: .gitignore  CLAUDE.md  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  run.py  zhipu_asr.sh
.claude/: settings.local.json
app/: __init__.py  routes.py  workspace_service.py
app/static/css/: style.css  workspace-spa.css
app/static/js/: app.js  audio-processor.js  realtime-transcription.js  wav-encoder-worker.js
app/static/js/workspace/: api.js  main.js  router.js  state.js  toast.js
app/static/js/workspace/components/: background.js  dashboard.js  glossary.js  meetings.js  (+6 more)
docs/: API.md  AUDIO_ARCHITECTURE.md  CHANGELOG.md  DOCUMENTATION_PLAN.md  FEATURE_GLOSSARY_SYSTEM.md  FEATURE_MEETING_PROCESSING.md  FEATURE_PROJECT_MEMORY.md  FEATURE_REALTIME_TRANSCRIPTION.md  FEATURE_TRANSLATION.md  FEATURE_WORKSPACE_SPA.md  README.md  TERMINOLOGY.md  USAGE.md  meeting_minutes_agent.md  realtime-transcription-best-practices.md  realtime_agent_integration_design.md
meeting_agent/: __init__.py  __main__.py  config.py  models.py  models_glossary.py  progress.py
meeting_agent/asr/: __init__.py  engine.py  router.py  vibevoice_engine.py
meeting_agent/glossary/: __init__.py  context_manager.py  manager.py
meeting_agent/llm/: __init__.py  client.py  prompts.py
meeting_agent/memory/: __init__.py  actions.py  context.py  timeline.py  writer.py
meeting_agent/output/: __init__.py
meeting_agent/scanner/: __init__.py  scanner.py
meeting_agent/utils/: __init__.py  helpers.py
templates/: index.html  login.html  workspace.html  workspace_audio.html  workspace_background.html  workspace_file.html  workspace_glossary.html  workspace_project.html  workspace_spa.html
tools/: README.md  zhipu_asr.py
